# tauri-electron-app

./: .editorconfig  .gitignore  README.md  README.zh-Hans.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.base.json  vite.config.web.ts
apps/electron/: electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.json
apps/electron/src/main/: index.ts
apps/electron/src/preload/: index.ts
apps/electron/src/renderer/: index.html
apps/tauri/: index.html  package.json  vite.config.ts
apps/tauri/src/: main.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.ts
src/main/: index.ts
src/renderer/src/: main.ts
src/renderer/src/components/: Versions.vue
src/renderer/src/router/: index.ts
src/renderer/src/utils/: env.ts
src/renderer/src/views/: Home.vue
